<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ffchat="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <android.support.v4.view.ViewPager
        android:id="@+id/id_viewpager"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="@drawable/tabbg"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <com.ffchat.localchat.view.ChangeColorIconWithTextView
            android:id="@+id/id_indicator_one"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            ffchat:icon="@drawable/ic_menu_start_conversation"
            ffchat:text="@string/tab_weixin"
            ffchat:text_size="12sp" />

        <com.ffchat.localchat.view.ChangeColorIconWithTextView
            android:id="@+id/id_indicator_two"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            ffchat:icon="@drawable/ic_menu_friendslist"
            ffchat:text="@string/tab_contact"
            ffchat:text_size="12sp" />

        <com.ffchat.localchat.view.ChangeColorIconWithTextView
            android:id="@+id/id_indicator_three"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            ffchat:icon="@drawable/ic_menu_emoticons"
            ffchat:text="@string/tab_find"
            ffchat:text_size="12sp" />

        <com.ffchat.localchat.view.ChangeColorIconWithTextView
            android:id="@+id/id_indicator_four"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            ffchat:icon="@drawable/ic_menu_allfriends"
            ffchat:text="@string/tab_me"
            ffchat:text_size="12sp" />
    </LinearLayout>

</RelativeLayout>